fix: you could not scroll down in deck on mobile. => drag holder implemented, now you can only drag the cards with the holder element on their right

--- a/src/deck-container/deck-container.component.scss
+++ b/src/deck-container/deck-container.component.scss
@@ -173,25 +173,33 @@ mat-slider {
   transition: transform 100ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.amountModifier {
+.modifier {
   position: absolute;
   top: 0.625rem;
   height: 1.65rem;
+  
+  // centering the icon in it
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.amountModifier {
   width: 42px;
   cursor: pointer;
   background-color: #3f51b5;
   border-radius: 4px;
   transition: background-color 0.2s ease;
-
-  // centering the icon in it
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 0 0 1px 0px white;
+  
+  box-shadow: 0 0 3px 1px black;
 }
 
 .amountModifier:hover {
   background-color: #5c6bc0; /* Slightly lighter shade for hover */
+}
+
+.dragModifier {
+  right: 2px;
 }
 
 // #cardRemoveModifier {
